tests/baselines/reference/jsxJsxsCjsTransformCustomImportPragma(jsx=react-jsxdev).errors.txt
preact.tsx(3,11): error TS2875: This JSX tag requires the module path 'preact/jsx-dev-runtime' to exist, but none could be found. Make sure you have types for the appropriate package installed.
preact.tsx(3,11): error TS2879: Using JSX fragments requires fragment factory 'React' to be in scope, but it could not be found.


==== react.tsx (0 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    /* @jsxImportSource react */
    import "./preact";
    const a = <>
      <p></p>
      text
      <div className="foo"></div>
    </>
    
    export {};
==== preact.tsx (2 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    /* @jsxImportSource preact */
    const a = <>
              ~~
!!! error TS2875: This JSX tag requires the module path 'preact/jsx-dev-runtime' to exist, but none could be found. Make sure you have types for the appropriate package installed.
              ~~
!!! error TS2879: Using JSX fragments requires fragment factory 'React' to be in scope, but it could not be found.
      <p></p>
      text
      <div className="foo"></div>
    </>
    
    export {};